FIXME cGate inspectors have now two "up" buttons!!!
TBD there should be a limit on the number of inspector windows open, to prevent
accidentally opening thousand windows with objects of identical names
Need display string option to turn off module labels
TODO: need <Copy> icon on module output window toolbars
TODO: treeview into eacgh object inspector!
TODO: controlInfo page into cMessage inspector

2004-03-18  Andras Varga

	* structinsp.cc: display getFieldsAsString() also for structs (that is,
	its operator<< is used to display a one-line brief of the struct)

2004-03-03  ------ omnetpp-3.0a2 released ------

2004-03-03  Andras Varga

	* modinsp2.tcl, etc: implemented option to display className() of 
	animated messages. New omnetpp.ini option: 
          [Tkenv]/animation-msgclassnames=true/false (default is true)

2004-03-01  Andras Varga

	* inspector.tcl/cc, etc: all inspector windows got an "Inspect owner"
	toolbar button; on module inspectors this works as "Inspect parent 
	module".

	* fix: Filtered Object List dialog ignored scheduled events list

	* fix: cPacket inspector "Fields" page was always empty

2004-02-23  Andras Varga

	* tkapp.cc/h: added moduleReparented() cEnvir method

2004-02-18  Andras Varga 

        * tkapp.cc/h, menuproc.tcl: on-the-fly switching from one runmode to
        another (run,normal,express)

	* menuproc.tcl,dialogs.tcl: added [x] Confirm exit checkbox to 
	Simulation options dialog

	* dialogs.tcl: express mode "STOP" dialog refined

	* dialogs.tcl: Find dialog improved

2004-02-11  Andras Varga 

	* tkapp.cc: propagated semantic change in getNextEvent()'s and
	selectNextModule()'s return value (see include/ChangeLog)

2004-02-07  Andras Varga

	* cstructinsp.cc: fix: prepare for missing descriptor object
	[bug reported by Kurtis Kredo]
	
2004-02-04  ------ omnetpp-3.0pre1 released ------

2004-01-20  Andras Varga

	* added Edit|Copy to menu

2004-01-17  Andras Varga
